Add configs for rcon2irc

--- a/rcon2irc/hub-eu-ctf-wa.conf
+++ b/rcon2irc/hub-eu-ctf-wa.conf
@@ -1,11 +1,11 @@
 # DarkPlaces server data
-dp_server = 0.0.0.0
+dp_server = 176.9.65.177:27100
 dp_password = replaceme
 
 # IRC configuration
 irc_server = irc.quakenet.org
-irc_nick = hub-na-ctf
-irc_nick_alternates = hub-na-ctf_ hub-na-ctf__
+irc_nick = hub-eu-ctf-wa
+irc_nick_alternates = hub-eu-ctf-wa_ hub-eu-ctf-wa__
 irc_user = hubbot
 irc_channel = #xonotic.hub
 
@@ -19,7 +19,7 @@ irc_channel = #xonotic.hub
 #irc_quakenet_authname = hack
 #irc_quakenet_password = me
 # Users with a Q account listed here can use admin commands on the bot
-#irc_quakenet_authusers = a b c
+irc_quakenet_authusers = Samual
 
 # IRC on-connect commands
 #irc_commands = PRIVMSG Admin :hello, I am there; MODE $nick +x
@@ -36,7 +36,7 @@ irc_trigger = foobar
 #irc_announce_mapchange = always
 
 # Tuning
-#dp_secure = 1
+dp_secure = 1
 #dp_secure_challengetimeout = 1
 #dp_server_from_wan =
 #dp_listen = 
