More work on adding the hub servers to IRC

--- a/rcon2irc/hub-na-ctf-wa.conf
+++ b/rcon2irc/hub-na-ctf-wa.conf
@@ -1,13 +1,15 @@
 # DarkPlaces server data
-dp_server = 64.237.42.68:27100
+dp_server = 127.0.0.1:30142
 dp_password = replaceme
 
 # IRC configuration
 irc_server = irc.quakenet.org
-irc_nick = hub-na-ctf-wa
-irc_nick_alternates = hub-na-ctf-wa_ hub-na-ctf-wa__
-irc_user = hubbot
+irc_password = example
+irc_user = hub-
+irc_nick = eu-ctf-wa
+irc_nick_alternates = eu-ctf-wa_ eu-ctf-wa__
 irc_channel = #xonotic.hub
+irc_joinmessage = eu-ctf-wa server is online!
 
 # uncomment for server administration via IRC
 #irc_admin_password = hackme
@@ -31,36 +33,29 @@ irc_quakenet_authusers = Samual
 irc_trigger = foobar
 
 # Custom output options
-#irc_announce_slotsfree = 1
+irc_announce_slotsfree = 1
 # The var irc_announce_mapchange can be set to either never, notempty or always
-#irc_announce_mapchange = always
+irc_announce_mapchange = notempty
 
 # Tuning
+dp_game = Xonotic
 dp_secure = 1
-#dp_secure_challengetimeout = 1
-#dp_server_from_wan =
-#dp_listen = 
-#dp_listen_from_server =
+#dp_server_from_wan = smb.qc.to
+#dp_listen = 0
 #dp_status_delay = 30
-#dp_utf8_enable = 1
-#dp_timinglog = timing.log
 #irc_reconnect_delay = 300
+dp_listen_from_server = wtwrp.de
 #irc_admin_timeout = 3600
 #irc_admin_quote_re =
-#irc_local = 
-#irc_ping_delay = 120
-#irc_nickserv_identify = PRIVMSG NickServ :IDENTIFY %2$s
-#irc_nickserv_ghost = PRIVMSG NickServ :GHOST %1$s %2$s
-#irc_nickserv_ghost_attempts = 3
-#irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
-#irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
-#irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
+#irc_local = 0
+dp_utf8_enable = 1
+#irc_ping_delay = 300
+irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
+irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
+irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
 
 # Example: Gamesurge AuthServ (does not provide ghosting)
 #irc_nickserv_password = mypassword
 #irc_nickserv_identify = AUTHSERV AUTH myauthname %2$s
 #irc_nickserv_ghost =
 #irc_nickserv_ghost_attempts = 0
-
-# Example: connect to a non-secure DP server
-#dp_secure = 0
