--- a/rcon2irc/hub-bitmissile-ctf-wa.conf
+++ b/rcon2irc/hub-bitmissile-ctf-wa.conf
@@ -1,21 +1,18 @@
 # DarkPlaces server data
-dp_server = 127.0.0.1:30142
+dp_server = 64.237.42.68:30142
 dp_password = replaceme
 
 # IRC configuration
-irc_server = irc.quakenet.org
+irc_server = 176.9.65.177:39999
+# 127.0.0.1:39999
+# 176.9.65.177:39999
 irc_password = example
 irc_user = hub-
-irc_nick = eu-ctf-wa
-irc_nick_alternates = eu-ctf-wa_ eu-ctf-wa__
+irc_nickprefix = nactfwa: 
+irc_nick = nactfwa
+irc_nick_alternates = nactfwa_ nactfwa__
 irc_channel = #xonotic.hub
-irc_joinmessage = eu-ctf-wa server is online!
-
-# uncomment for server administration via IRC
-#irc_admin_password = hackme
-
-# IRC NickServ authentication (optional)
-#irc_nickserv_password = hackme
+irc_joinmessage = nactfwa server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
@@ -23,14 +20,11 @@ irc_joinmessage = eu-ctf-wa server is online!
 # Users with a Q account listed here can use admin commands on the bot
 irc_quakenet_authusers = Samual
 
-# IRC on-connect commands
-#irc_commands = PRIVMSG Admin :hello, I am there; MODE $nick +x
-
 # Extra plug-ins to load
-#plugins =
+plugins = joinsparts.pl flood.pl
 
 # Alternate IRC trigger (can be used instead of nickname to send stuff to the server)
-irc_trigger = foobar
+irc_trigger = huball
 
 # Custom output options
 irc_announce_slotsfree = 1
@@ -40,19 +34,19 @@ irc_announce_mapchange = notempty
 # Tuning
 dp_game = Xonotic
 dp_secure = 1
-#dp_server_from_wan = smb.qc.to
-#dp_listen = 0
+dp_server_from_wan = xonotic.bitmissile.com
+#dp_listen = 176.9.65.177
 #dp_status_delay = 30
 #irc_reconnect_delay = 300
-dp_listen_from_server = wtwrp.de
+dp_listen_from_server = 176.9.65.177
 #irc_admin_timeout = 3600
 #irc_admin_quote_re =
 #irc_local = 0
 dp_utf8_enable = 1
 #irc_ping_delay = 300
-irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
-irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
-irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
+#irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
+#irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
+#irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
 
 # Example: Gamesurge AuthServ (does not provide ghosting)
 #irc_nickserv_password = mypassword
