--- a/rcon2irc/hub-wtwrp-votable.conf
+++ b/rcon2irc/hub-wtwrp-votable.conf
@@ -34,7 +34,7 @@ irc_announce_mapchange = notempty
 # Tuning
 dp_game = Xonotic
 dp_secure = 1
-dp_server_from_wan = xonotic.bitmissile.com
+dp_server_from_wan = wtwrp.de
 #dp_listen = 176.9.65.177
 #dp_status_delay = 30
 #irc_reconnect_delay = 300
