--- a/rcon2irc/hub-bitmissile-ctf-wa.conf
+++ b/rcon2irc/hub-bitmissile-ctf-wa.conf
@@ -12,7 +12,7 @@ irc_nickprefix = nactfwa:
 irc_nick = nactfwa
 irc_nick_alternates = nactfwa_ nactfwa__
 irc_channel = #xonotic.hub
-irc_joinmessage = nactfwa server is online!
+irc_joinmessage = rcon2irc: nactfwa server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
