--- a/rcon2irc/hub-wtwrp-ctf-wa.conf
+++ b/rcon2irc/hub-wtwrp-ctf-wa.conf
@@ -12,7 +12,7 @@ irc_nickprefix = euctfwa:
 irc_nick = euctfwa
 irc_nick_alternates = euctfwa_ euctfwa__
 irc_channel = #xonotic.hub
-irc_joinmessage = euctfwa server is online!
+irc_joinmessage = rcon2irc: euctfwa server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
